--- a/pages/careers.html
+++ b/pages/careers.html
@@ -253,21 +253,13 @@
           <div class="team-members-gallery">
             <div class="team-row career-candidates">
               <div class="team-col">
-                <div class="team-image-div">
+                <div class="team-image-div rem_hover">
                   <img
                     style="top: 20px !important"
                     class="team-img"
                     src="../assets/careers/Jinisha Jobin.jpg"
                     alt=""
                   />
-                  <div
-                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
-                  >
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </div>
                 </div>
                 <div class="team-content">
                   <h4><a href="#" class="member-name">Jinisha Jobin</a></h4>
@@ -275,20 +267,12 @@
                 </div>
               </div>
               <div class="team-col">
-                <div class="team-image-div">
+                <div class="team-image-div rem_hover">
                   <img
                     class="team-img"
                     src="../assets/careers/Megha.jpg"
                     alt=""
                   />
-                  <div
-                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
-                  >
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </div>
                 </div>
                 <div class="team-content">
                   <h4><a href="#" class="member-name">Megha</a></h4>
@@ -296,21 +280,13 @@
                 </div>
               </div>
               <div class="team-col">
-                <div class="team-image-div">
+                <div class="team-image-div rem_hover">
                   <img
-                    style="margin-top: 27px !important"
+                    style="width: 600px; aspect-ratio: 5/6"
                     class="team-img"
                     src="../assets/careers/Monisha.jpeg"
                     alt=""
                   />
-                  <div
-                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
-                  >
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </div>
                 </div>
                 <div class="team-content">
                   <h4><a href="#" class="member-name">Monisha</a></h4>
@@ -318,41 +294,25 @@
                 </div>
               </div>
               <div class="team-col">
-                <div class="team-image-div">
+                <div class="team-image-div rem_hover">
                   <img
                     class="team-img"
                     src="../assets/careers/Sophia.jpeg"
                     alt=""
                   />
-                  <div
-                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
-                  >
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </div>
                 </div>
-                <div class="team-content">
+                <div class="team-content rem_hover">
                   <h4><a href="#" class="member-name">Sophia</a></h4>
                   <p class="member-position">Ainsoft Solutions</p>
                 </div>
               </div>
               <div class="team-col">
-                <div class="team-image-div">
+                <div class="team-image-div rem_hover">
                   <img
                     class="team-img"
                     src="../assets/teams/chinju.jpg"
                     alt=""
                   />
-                  <div
-                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
-                  >
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </div>
                 </div>
                 <div class="team-content">
                   <h4><a href="#" class="member-name">Chinju</a></h4>
@@ -360,20 +320,12 @@
                 </div>
               </div>
               <div class="team-col">
-                <div class="team-image-div">
+                <div class="team-image-div rem_hover">
                   <img
                     class="team-img"
                     src="../assets/careers/Tincy K Thomas.jpeg"
                     alt=""
                   />
-                  <div
-                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
-                  >
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </div>
                 </div>
                 <div class="team-content">
                   <h4><a href="#" class="member-name">Tincy K Thomas</a></h4>
@@ -381,20 +333,12 @@
                 </div>
               </div>
               <div class="team-col">
-                <div class="team-image-div">
+                <div class="team-image-div rem_hover">
                   <img
                     class="team-img"
                     src="../assets/teams/vargees.jpg"
                     alt=""
                   />
-                  <div
-                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
-                  >
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </div>
                 </div>
                 <div class="team-content">
                   <h4><a href="#" class="member-name">Vargees</a></h4>
@@ -402,20 +346,12 @@
                 </div>
               </div>
               <div class="team-col">
-                <div class="team-image-div">
+                <div class="team-image-div rem_hover">
                   <img
                     class="team-img"
                     src="../assets/teams/nithya.jpeg"
                     alt=""
                   />
-                  <div
-                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
-                  >
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </div>
                 </div>
                 <div class="team-content">
                   <h4><a href="#" class="member-name">Nithya</a></h4>
@@ -423,20 +359,12 @@
                 </div>
               </div>
               <div class="team-col">
-                <div class="team-image-div">
+                <div class="team-image-div rem_hover">
                   <img
                     class="team-img"
                     src="../assets/careers/Alka infosys.png"
                     alt=""
                   />
-                  <div
-                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
-                  >
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </div>
                 </div>
                 <div class="team-content">
                   <h4><a href="#" class="member-name">Alka</a></h4>
@@ -444,20 +372,12 @@
                 </div>
               </div>
               <div class="team-col">
-                <div class="team-image-div" style="overflow: hidden">
+                <div class="team-image-div rem_hover">
                   <img
                     class="team-img"
                     src="../assets/careers/Almi UST.png"
                     alt=""
                   />
-                  <div
-                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
-                  >
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </div>
                 </div>
                 <div class="team-content">
                   <h4><a href="#" class="member-name">Almi</a></h4>
@@ -465,20 +385,12 @@
                 </div>
               </div>
               <div class="team-col">
-                <div class="team-image-div">
+                <div class="team-image-div rem_hover">
                   <img
                     class="team-img"
                     src="../assets/careers/Joel Joy Quest.jpg"
                     alt=""
                   />
-                  <div
-                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
-                  >
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </div>
                 </div>
                 <div class="team-content">
                   <h4><a href="#" class="member-name">Joel Joy</a></h4>
@@ -486,20 +398,12 @@
                 </div>
               </div>
               <div class="team-col">
-                <div class="team-image-div">
+                <div class="team-image-div rem_hover">
                   <img
                     class="team-img"
                     src="../assets/careers/Rahana quest.png"
                     alt=""
                   />
-                  <div
-                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
-                  >
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </div>
                 </div>
                 <div class="team-content">
                   <h4><a href="#" class="member-name">Rahana</a></h4>
@@ -507,20 +411,12 @@
                 </div>
               </div>
               <div class="team-col">
-                <div class="team-image-div">
+                <div class="team-image-div rem_hover">
                   <img
                     class="team-img"
                     src="../assets/careers/Sajitha UST.png"
                     alt=""
                   />
-                  <div
-                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
-                  >
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </div>
                 </div>
                 <div class="team-content">
                   <h4><a href="#" class="member-name">Sajitha</a></h4>
