--- a/pages/careers.html
+++ b/pages/careers.html
@@ -255,8 +255,8 @@
               <div class="team-col">
                 <div class="team-image-div rem_hover">
                   <img
-                    style="top: 20px !important"
-                    class="team-img"
+                    
+                    class="team-img jinisha"
                     src="../assets/careers/Jinisha Jobin.jpg"
                     alt=""
                   />
@@ -269,7 +269,7 @@
               <div class="team-col">
                 <div class="team-image-div rem_hover">
                   <img
-                    class="team-img"
+                    class="team-img megha"
                     src="../assets/careers/Megha.jpg"
                     alt=""
                   />
@@ -282,8 +282,8 @@
               <div class="team-col">
                 <div class="team-image-div rem_hover">
                   <img
-                    style="width: 600px; aspect-ratio: 5/6"
-                    class="team-img"
+                    
+                    class="team-img monisha"
                     src="../assets/careers/Monisha.jpeg"
                     alt=""
                   />
