--- a/pages/softwaredev.html
+++ b/pages/softwaredev.html
@@ -349,7 +349,7 @@
                     <h6>Get in Touch</h6>
                     <p>
                       Ready to harness the power of custom software for your
-                      business? Contact [Your IT Company] today to discuss your
+                      business? Contact SciPy Technologies today to discuss your
                       software development needs. We're committed to delivering
                       innovative solutions that will drive your business
                       forward, enhance efficiency, and unlock new opportunities.
