--- a/pages/websitedev.html
+++ b/pages/websitedev.html
@@ -336,7 +336,7 @@
                     <h6>Get In Touch</h6>
                     <p style="text-align: justify; line-height: 1.5rem">
                       Ready to embark on a journey of innovation and growth with
-                      MERN Stack web development? Contact [Your IT Company]
+                      MERN Stack web development? Contact SciPy Technologies
                       today! We'd be delighted to discuss your project,
                       understand your vision, and provide a tailored solution
                       that exceeds your expectations. <br /><br />Let's build
