--- a/pages/AdvancedTech.html
+++ b/pages/AdvancedTech.html
@@ -228,32 +228,37 @@
               <div class="lower-content">
                 <h3>Advanced Tech</h3>
                 <p>
-                  Amalgamation of Intelligence and Mathematics to empower the
-                  autonomous world.We can make your system in a automatic way.
-                  Autonomous Analytic model building that enriches the
-                  productivity and scale up your bussiness.We are helping to
-                  hand over sectors for building the better one. Augment your
-                  imaginations, we support various B2B(business to business) and
-                  B2C (Business to Consumer) commercial activities,particularly
-                  for the retail industry.
+                  Welcome to our pioneering platform, where advanced technology
+                  converges to revolutionise both B2B and B2C experiences
+                  through the power of AI and cutting-edge innovations. In the
+                  B2B sphere, our platform harnesses AI's capabilities, offering
+                  predictive analytics and tailored CRM solutions that empower
+                  businesses with unprecedented insights. From predictive sales
+                  forecasting to optimising supply chains, our tools drive
+                  operational efficiency and elevate strategic decision-making.
+                  Simultaneously, in the B2C landscape, our platform crafts
+                  personalised shopping journeys using AI-driven product
+                  recommendations and immersive visualisation tools, creating an
+                  enriched consumer experience. With responsive AI-powered
+                  customer service and secure transactional environments, trust
+                  and reliability are at the forefront, ensuring seamless
+                  interactions.
                 </p>
                 <p>
-                  Hybrid automation technologiy to accurate performance and
-                  productivity. we provide bot system for efficent resource
-                  utilization. Our IOT systems enables you to connect, organize,
-                  monitor and control your bussiness and technological asseta
-                  for wider resourse utilization and better efficiency.
-                  Simulated experience that can be similar to or complete
-                  different from real world. we provide wide ranges of ways in
-                  virtual reality
+                  At our core, we prioritise cross-platform integration and
+                  innovation, utilising AI algorithms and machine learning
+                  methodologies that transcend user experiences and synchronise
+                  data seamlessly. Our innovation showcase and thought
+                  leadership content, featuring real-life case studies and
+                  expert insights, solidify our position at the forefront of
+                  AI's transformative potential in both B2B and B2C domains.
+                  Upholding ethical AI practices and stringent data privacy
+                  standards, we provide a secure environment compliant with
+                  regulations. Join us on our journey, where ethical innovation
+                  converges with cutting-edge technology, shaping the future of
+                  businesses and consumer interactions.
                 </p>
-                <h6>Our Success JOURNEY We can Provide.</h6>
-                <p>
-                  Phasellus dignissim arcu sit amet augue mattis, eget rutrum ex
-                  finibus. Morbi blandit luctus nisi, id ornare sem blandit sed.
-                  In sed luctus dolor. Integer vitae pretium nunc. Aliquam
-                  rutrum lectus vel est pulvinar in scelerisque purus.
-                </p>
+
                 <div class="lower-content-row">
                   <div class="lower-content-col">
                     <img
@@ -264,19 +269,13 @@
                     />
                   </div>
                   <div class="lower-content-col">
-                    <h6>
-                      It consultancy and It services to Join Work Our company?
-                    </h6>
+                    <h6>{___NEED CONTENT HERE___}</h6>
                     <p>
-                      Nulla facilisi. Nullam congue, tortor id finibus pose,
-                      risus magna convallis massa, sit amet gravida est tellus
-                      vitae dui. Proin hendrerit.
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                      Modi ad fugiat cupiditate! Dolores iure nesciunt, eius
+                      vero ratione pariatur! Ipsum, aperiam nam ipsam aut fugiat
+                      nihil sapiente voluptatum? Vel, corporis?
                     </p>
-                    <ul class="service-list-content">
-                      <li>One-time security check fee: $99.95</li>
-                      <li>One-time security check fee: $99.95</li>
-                      <li>One-time security check fee: $99.95</li>
-                    </ul>
                   </div>
                 </div>
               </div>
