--- a/pages/aisol.html
+++ b/pages/aisol.html
@@ -246,54 +246,64 @@
               />
               <div class="lower-content">
                 <h3>AI Solutions</h3>
+                <h6>Application Support Excellence:</h6>
                 <p>
-                  Our Application Support offer top quality well organised
-                  adaptive support. We are resposible for the design,
-                  installation, maintenance and requirement of the system and
-                  personal that are at this core of an organisation. We provide
-                  customer support service, for a range of customer to get out
-                  of your product and resolve their problem
+                  At the heart of our service offerings is a commitment to
+                  providing top-quality, well-organised, and adaptive
+                  application support. We understand that in today's dynamic
+                  business environment, the smooth operation of software systems
+                  is critical to the core functions of any organisation. Our
+                  comprehensive approach encompasses the design, installation,
+                  maintenance, and fulfilment of system requirements, ensuring
+                  that our clients' applications remain robust, efficient, and
+                  aligned with their organisational objectives.
                 </p>
+
+                <h6>End-to-End Responsibility:</h6>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Veniam officia fuga saepe. Laudantium quod voluptatibus modi
-                  laborum esse saepe itaque enim perferendis, perspiciatis quasi
-                  corporis ullam, earum, nihil dolore aperiam? Lorem ipsum dolor
-                  sit, amet consectetur adipisicing elit. Ratione fugiat
-                  adipisci iure sapiente blanditiis! Doloremque consequatur
-                  voluptatibus error facere commodi voluptatum! Dolore excepturi
-                  neque doloremque earum voluptas aspernatur, modi fuga?
+                  Our role extends beyond mere support; we take on the
+                  end-to-end responsibility for the design, installation, and
+                  ongoing maintenance of the systems that form the backbone of
+                  an organisation. From conceptualization to implementation, we
+                  ensure that the technology infrastructure is not just a tool
+                  but a strategic asset. Our team is dedicated to proactively
+                  addressing evolving business needs, ensuring that the
+                  applications we support are not just functional but contribute
+                  positively to the overall efficiency and effectiveness of our
+                  clients' operations.
                 </p>
-                <h6>Our Success JOURNEY We can Provide.</h6>
+                <h6>Customer-Centric Support:</h6>
                 <p>
-                  Phasellus dignissim arcu sit amet augue mattis, eget rutrum ex
-                  finibus. Morbi blandit luctus nisi, id ornare sem blandit sed.
-                  In sed luctus dolor. Integer vitae pretium nunc. Aliquam
-                  rutrum lectus vel est pulvinar in scelerisque purus.
+                  In addition to the technical aspects, our application support
+                  services include a robust customer support component. We
+                  recognize that end-users are at the forefront of any
+                  technology implementation, and their satisfaction is
+                  paramount. Our customer support services cater to a diverse
+                  range of customers, providing them with assistance to maximise
+                  the utility of the product and swiftly resolve any challenges
+                  they may encounter. Whether it's troubleshooting, guidance on
+                  product features, or resolving technical issues, our customer
+                  support team is dedicated to ensuring a positive and seamless
+                  experience for users.
                 </p>
                 <div class="lower-content-row">
                   <div class="lower-content-col">
                     <img
                       style="border-radius: 30px"
                       class="lower-content-img"
-                      src="../assets/services/aisolutions/3.jpg+"
+                      src="../assets/services/aisolutions/3.jpg"
                       alt=""
                     />
                   </div>
                   <div class="lower-content-col">
-                    <h6>
-                      It consultancy and It services to Join Work Our company?
-                    </h6>
+                    <h6>{___NEED_content_here___}</h6>
                     <p>
-                      Nulla facilisi. Nullam congue, tortor id finibus pose,
-                      risus magna convallis massa, sit amet gravida est tellus
-                      vitae dui. Proin hendrerit.
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Harum modi eum delectus veniam error minus. Placeat
+                      architecto voluptatem perspiciatis. Nulla unde doloribus
+                      nisi. Assumenda ex magni numquam! Quibusdam, officia
+                      aliquam?
                     </p>
-                    <ul class="service-list-content">
-                      <li>One-time security check fee: $99.95</li>
-                      <li>One-time security check fee: $99.95</li>
-                      <li>One-time security check fee: $99.95</li>
-                    </ul>
                   </div>
                 </div>
               </div>
