--- a/pages/maintenance.html
+++ b/pages/maintenance.html
@@ -158,7 +158,9 @@
                 </ul>
               </div>
               <div class="quote-btn">
-                <a class="btn btn-outline-primary btn-effect" href="https://docs.google.com/forms/d/e/1FAIpQLSdCflnzkgZQJeNpMCLHlw5WEfF2kC_A36-_trk5WjdEcW6fhA/viewform?usp=sf_link"
+                <a
+                  class="btn btn-outline-primary btn-effect"
+                  href="https://docs.google.com/forms/d/e/1FAIpQLSdCflnzkgZQJeNpMCLHlw5WEfF2kC_A36-_trk5WjdEcW6fhA/viewform?usp=sf_link"
                   >Get Quote</a
                 >
                 <div class="sidemenu-btn">
@@ -187,12 +189,21 @@
                 <div class="header-right-nav">
                   <div class="email-header">
                     <span>Email us</span>
-                    <a href="mailto:hello@scipytechnologies.com">hello@scipytechnologies.com</a>
+                    <a href="mailto:hello@scipytechnologies.com"
+                      >hello@scipytechnologies.com</a
+                    >
                   </div>
                   <div class="header-top-social">
-                    <a href="https://www.facebook.com/scipytechnologiez/">FB.</a>
-                    <a href="https://www.instagram.com/scipytechnologies/">IN.</a>
-                    <a href="https://www.linkedin.com/company/scipytechnologies/mycompany/">LN.</a>
+                    <a href="https://www.facebook.com/scipytechnologiez/"
+                      >FB.</a
+                    >
+                    <a href="https://www.instagram.com/scipytechnologies/"
+                      >IN.</a
+                    >
+                    <a
+                      href="https://www.linkedin.com/company/scipytechnologies/mycompany/"
+                      >LN.</a
+                    >
                   </div>
                 </div>
               </div>
@@ -236,30 +247,31 @@
               <div class="lower-content">
                 <h3>Maintenance and Support</h3>
                 <p>
-                  Our Application Support offer top quality well organised
-                  adaptive support. We are resposible for the design,
-                  installation, maintenance and requirement of the system and
-                  personal that are at this core of an organisation. We provide
-                  customer support service, for a range of customer to get out
-                  of your product and resolve their problem
+                  Welcome to our comprehensive suite of maintenance and support
+                  services designed to elevate your technological endeavours. We
+                  specialise in a spectrum of services including web
+                  development, app development, ERP (Enterprise Resource
+                  Planning), CRM (Customer Relationship Management), and AI
+                  solutions, ensuring your systems remain optimised, secure, and
+                  at the forefront of innovation.
                 </p>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Veniam officia fuga saepe. Laudantium quod voluptatibus modi
-                  laborum esse saepe itaque enim perferendis, perspiciatis quasi
-                  corporis ullam, earum, nihil dolore aperiam? Lorem ipsum dolor
-                  sit, amet consectetur adipisicing elit. Ratione fugiat
-                  adipisci iure sapiente blanditiis! Doloremque consequatur
-                  voluptatibus error facere commodi voluptatum! Dolore excepturi
-                  neque doloremque earum voluptas aspernatur, modi fuga?
+                  Our dedicated team of experts stands ready to provide ongoing
+                  maintenance and support across all facets of your digital
+                  landscape. From seamless web development upkeep and app
+                  maintenance to the intricate intricacies of ERP and CRM
+                  systems, our commitment is to ensure optimal performance and
+                  reliability. Moreover, our proficiency in AI solutions ensures
+                  cutting-edge technological advancements are seamlessly
+                  integrated into your infrastructure. Whether it's
+                  troubleshooting, updates, security enhancements, or scaling,
+                  our comprehensive maintenance and support services are
+                  tailored to meet your evolving needs. Partner with us to
+                  unlock the full potential of your technology, allowing you to
+                  focus on your core business while we handle the intricacies of
+                  your digital ecosystem.
                 </p>
-                <h6>Our Success JOURNEY We can Provide.</h6>
-                <p>
-                  Phasellus dignissim arcu sit amet augue mattis, eget rutrum ex
-                  finibus. Morbi blandit luctus nisi, id ornare sem blandit sed.
-                  In sed luctus dolor. Integer vitae pretium nunc. Aliquam
-                  rutrum lectus vel est pulvinar in scelerisque purus.
-                </p>
+
                 <div class="lower-content-row">
                   <div class="lower-content-col">
                     <img
@@ -270,19 +282,13 @@
                     />
                   </div>
                   <div class="lower-content-col">
-                    <h6>
-                      It consultancy and It services to Join Work Our company?
-                    </h6>
+                    <h6>{___NEED CONTENT HERE___}</h6>
                     <p>
-                      Nulla facilisi. Nullam congue, tortor id finibus pose,
-                      risus magna convallis massa, sit amet gravida est tellus
-                      vitae dui. Proin hendrerit.
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                      Modi ad fugiat cupiditate! Dolores iure nesciunt, eius
+                      vero ratione pariatur! Ipsum, aperiam nam ipsam aut fugiat
+                      nihil sapiente voluptatum? Vel, corporis?
                     </p>
-                    <ul class="service-list-content">
-                      <li>One-time security check fee: $99.95</li>
-                      <li>One-time security check fee: $99.95</li>
-                      <li>One-time security check fee: $99.95</li>
-                    </ul>
                   </div>
                 </div>
               </div>
