--- a/pages/AdvancedTech.html
+++ b/pages/AdvancedTech.html
@@ -269,12 +269,18 @@
                     />
                   </div>
                   <div class="lower-content-col">
-                    <h6>{___NEED CONTENT HERE___}</h6>
+                    <h6>Get in Touch</h6>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      Modi ad fugiat cupiditate! Dolores iure nesciunt, eius
-                      vero ratione pariatur! Ipsum, aperiam nam ipsam aut fugiat
-                      nihil sapiente voluptatum? Vel, corporis?
+                      Ready to revolutionise your business operations with
+                      cutting-edge AI and advanced technology solutions? Connect
+                      with us to explore how our AI-powered platform can elevate
+                      your business in both B2B and B2C landscapes. Our
+                      commitment is to drive efficiency, data-driven
+                      decision-making, and unparalleled customer experiences.
+                      Join us in shaping the future of ethical innovation and
+                      technology convergence. Let's create a seamless and
+                      transformative journey for your business and customer
+                      interactions together.
                     </p>
                   </div>
                 </div>
