--- a/pages/aisol.html
+++ b/pages/aisol.html
@@ -296,13 +296,17 @@
                     />
                   </div>
                   <div class="lower-content-col">
-                    <h6>{___NEED_content_here___}</h6>
+                    <h6>Get in Touch</h6>
                     <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Harum modi eum delectus veniam error minus. Placeat
-                      architecto voluptatem perspiciatis. Nulla unde doloribus
-                      nisi. Assumenda ex magni numquam! Quibusdam, officia
-                      aliquam?
+                      Are you prepared to unlock the transformative potential of
+                      AI solutions tailored to propel your business into the
+                      future? Reach out to SciPy Technologies today to initiate
+                      a conversation about your AI development requirements. Our
+                      commitment is to deliver cutting-edge and innovative AI
+                      solutions that not only drive your business forward but
+                      also enhance operational efficiency and open doors to new
+                      opportunities. Your success with AI is not just a goal;
+                      it's our shared triumph.
                     </p>
                   </div>
                 </div>
