--- a/pages/maintenance.html
+++ b/pages/maintenance.html
@@ -282,12 +282,17 @@
                     />
                   </div>
                   <div class="lower-content-col">
-                    <h6>{___NEED CONTENT HERE___}</h6>
+                    <h6>Get in touch</h6>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      Modi ad fugiat cupiditate! Dolores iure nesciunt, eius
-                      vero ratione pariatur! Ipsum, aperiam nam ipsam aut fugiat
-                      nihil sapiente voluptatum? Vel, corporis?
+                      Ready to ensure your technological infrastructure remains
+                      optimised, secure, and at the cutting edge of innovation?
+                      Contact our dedicated team at Scipy technologies to
+                      explore how our comprehensive maintenance and support
+                      services can elevate your digital landscape. Partner with
+                      us to unlock the full potential of your technology while
+                      focusing on your core business objectives. Let us handle
+                      the intricacies of your digital ecosystem through our
+                      tailored maintenance and support services.
                     </p>
                   </div>
                 </div>
